java-11: adapt to JDK 11 (records->classes, text block->concat, pattern matching->cast, switch expr->if, scripts use JDK17 --release 11)